# SeedingProg

./: .gitignore  PDF.md  README.md  TZ.md  pyproject.toml
TestProg/: SegMl.py  TestSegML.py  TrainYOLOseg.py  process_pdf_and_save_crops.py
dataset/datasetSegV2/: dataset.yaml
dataset/datasetSegV2/test/labels/: Pak1_page-0002.txt  Pak1_page-0005.txt  Pak2_page-0004.txt  Pak2_page-0005.txt  Pak3_page-0010.txt
dataset/datasetSegV2/train/labels/: Pak1_page-0001.txt  Pak1_page-0003.txt  Pak1_page-0004.txt  Pak1_page-0009.txt  Pak2_page-0001.txt  Pak2_page-0002.txt  Pak2_page-0003.txt  Pak2_page-0006.txt  Pak2_page-0007.txt  Pak2_page-0008.txt  Pak2_page-0009.txt  Pak2_page-0010.txt  Pak2_page-0011.txt  Pak2_page-0012.txt  Pak2_page-0013.txt  Pak2_page-0014.txt  Pak2_page-0015.txt  Pak2_page-0016.txt  Pak2_page-0017.txt  Pak3_page-0001.txt  Pak3_page-0002.txt  (+5 more)
dataset/datasetSegV3/: dataset.yaml
dataset/datasetSegV3/train/: labels.cache
dataset/datasetSegV3/valid/: labels.cache
dataset/datasetSegV4/: dataset.yaml
results/exp_yolov8_custom_best11/: args.yaml
results/exp_yolov8_klass_5/: args.yaml
results/seeding-seg/: args.yaml
results/seeding-seg2/: args.yaml
results/seeding-seg3/: args.yaml
results/seeding-seg4/: args.yaml
results/seeding-seg5/: args.yaml
seeding/: __init__.py  config.py  main.py  report.py  requirements.txt  utils.py
seeding/models/: __init__.py  data_models.py
seeding/processing/: image_processor.py
seeding/ui/: __init__.py  bbox_item.py  main_window.py  tree_widget.py
tests/: test_report.py  test_utils.py
(+604 files in other folders)
